chore(*): update word from dismissable to dismissible

--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
                 <h2>Toast</h2>
                 <div class="row">
                     <div class="col is-6">
-                        <sgds-toast dismissable >
+                        <sgds-toast dismissible >
                             <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             This is a toast notifications This is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications 
                         </sgds-toast>
@@ -1191,7 +1191,7 @@
                             <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             autohide
                         </sgds-toast>
-                        <sgds-toast show dismissable>
+                        <sgds-toast show dismissible>
                             <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             This is a toast notifications helklo world 
                         </sgds-toast>
@@ -1205,12 +1205,12 @@
                             <sgds-link slot="action" href="#" target="_blank">Action</sgds-link>
                             This is a toast notifications
                         </sgds-toast>
-                        <sgds-toast show dismissable variant="warning">
+                        <sgds-toast show dismissible variant="warning">
                             <sgds-icon slot="icon" name="exclamation-triangle-fill"></sgds-icon>
                             <span slot="action">Action</span>
                             This is a toast notifications
                         </sgds-toast>
-                        <sgds-toast show dismissable variant="neutral">
+                        <sgds-toast show dismissible variant="neutral">
                             <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             <span slot="action">Action</span>
                             This is a toast notifications
