feat(accordion): update naming convention for accordion slots

--- a/index.html
+++ b/index.html
@@ -630,90 +630,90 @@
         <h3>Variant: default & Density: default</h3>
         <sgds-accordion>
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 1</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 1</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item disabled>
-            <div slot="accordion-header">Accordion 2</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 2</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item open>
-            <div slot="accordion-header">Accordion 3</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 3</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
         </sgds-accordion>
         <h3>Variant: default & Density: compact</h3>
         <sgds-accordion density="compact">
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 1</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 1</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 2</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 2</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item open>
-            <div slot="accordion-header">Accordion 3</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 3</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
         </sgds-accordion>
         <h3>Variant: border & Density: default</h3>
         <sgds-accordion variant="border">
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 1</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 1</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 2</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 2</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item open>
-            <div slot="accordion-header">Accordion 3</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 3</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
         </sgds-accordion>
         <h3>Variant: border & Density: compact</h3>
         <sgds-accordion variant="border" density="compact">
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 1</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 1</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 2</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 2</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item open>
-            <div slot="accordion-header">Accordion 3</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 3</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
         </sgds-accordion>
         <h3>Allow multiple</h3>
         <sgds-accordion allowMultiple density="compact">
           <sgds-accordion-item>
-            <div slot="accordion-header">Accordion 1</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 1</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item open>
-            <div slot="accordion-header">Accordion 2</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 2</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
           <sgds-accordion-item open>
-            <div slot="accordion-header">Accordion 3</div>
-            <span slot="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            <div slot="header">Accordion 3</div>
+            <span slot="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
               soluta eaque fugit fuga distinctio? Eum.</span>
           </sgds-accordion-item>
         </sgds-accordion>
