--- a/index.html
+++ b/index.html
@@ -1330,9 +1330,21 @@
               ]'></sgds-table>
         </div>
         <div class="container">
-          <h2>Dropdown</h2>
           <div class="row">
-            <sgds-dropdown togglerText="Dropdown" menuVariant="default">
+            <h2>Overflow</h2>
+            <sgds-dropdown menuVariant="default">
+              <sgds-icon-button
+              slot="toggler"
+              variant="ghost"
+              size="sm"
+              role="button"
+              variant=${this.variant}
+              ?disabled=${this.disabled}
+              aria-expanded="${this.menuIsOpen}"
+              aria-haspopup="menu"
+            >
+              <sgds-icon name="three-dots"></sgds-icon>
+            </sgds-icon-button>
               <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                   fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
                   <path
@@ -1346,6 +1358,36 @@
               <sgds-dropdown-item>Option label</sgds-dropdown-item>
               <sgds-dropdown-item>Option label</sgds-dropdown-item>
             </sgds-dropdown>
+          </div>
+          <h2>Dropdown</h2>
+          <div class="row">
+            <sgds-dropdown menuVariant="default" drop="up" disabled>
+              <sgds-button
+              slot="toggler"
+              outlined
+              role="button"
+              variant=${this.variant}
+              ?disabled=${this.disabled}
+              aria-expanded="${this.menuIsOpen}"
+              aria-haspopup="menu"
+            >
+              Dropdown
+              <sgds-icon name="chevron-down" slot="rightIcon"></sgds-icon>
+            </sgds-button>
+              <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                  fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                  <path
+                    d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                  <path
+                    d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
+                </svg>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item disabled>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+            </sgds-dropdown>
+
           </div>
         </div>
         <div class="container">
