--- a/index.html
+++ b/index.html
@@ -595,6 +595,22 @@
                     <sgds-tab-panel name="two">two</sgds-tab-panel>
                     <sgds-tab-panel name="three">three</sgds-tab-panel>
                 </sgds-tab-group>
+
+                <sgds-tab-group variant="solid" orientation="vertical" density="compact">
+                    <sgds-tab slot="nav" panel="one">
+                        <span slot="label">compact</span>
+                    </sgds-tab>
+                    <sgds-tab slot="nav" disabled panel="two">
+                        <span slot="label">disabledcompact</span>
+                    </sgds-tab>
+                    <sgds-tab slot="nav" panel="three">
+                        <span slot="label">threecompact</span>
+                    </sgds-tab>
+
+                    <sgds-tab-panel name="one">one</sgds-tab-panel>
+                    <sgds-tab-panel name="two">two</sgds-tab-panel>
+                    <sgds-tab-panel name="three">three</sgds-tab-panel>
+                </sgds-tab-group>
             </div>
             <h2>Stepper</h2>
             <div>
