--- a/index.html
+++ b/index.html
@@ -938,10 +938,10 @@
             <div class="container">
                 <h2>Modal</h2>
                 <sgds-button id="modalShowButton">Open Modal</sgds-button>
-                <sgds-modal centered title="hello" titleicon="<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; fill=&quot;currentColor&quot; class=&quot;bi bi-amd&quot; viewBox=&quot;0 0 16 16&quot;>
-                <path d=&quot;m.334 0 4.358 4.359h7.15v7.15l4.358 4.358V0H.334ZM.2 9.72l4.487-4.488v6.281h6.28L6.48 16H.2V9.72Z&quot;/>
-                </svg>">
-                    This is a Modal
+                <sgds-modal>
+                    <h2 slot="title">Modal title</h2>
+                    <p slot="description">Modal description</p>
+                    <p>This is a Modal</p>
                     <sgds-button slot="footer" variant="link" class="close-modal">Close</sgds-button>
                     <sgds-button slot="footer" variant="primary" type="submit" form="formA">Submit</sgds-button>
                 </sgds-modal>
