--- a/index.html
+++ b/index.html
@@ -424,22 +424,32 @@
         </sgds-icon-button>
       </div>
       <a href="#">light dom anchor</a>
-      <sgds-link href="https://google.com">Default</sgds-link>
-      <sgds-link href="https://google.com" target="_blank">Default</sgds-link>
-      <sgds-link href="https://google.com" disabled>Default (disabled)</sgds-link>
-      <sgds-link href="https://google.com" variant="danger">Danger</sgds-link>
-      <sgds-link href="https://google.com" variant="danger" disabled>Danger (disabled)</sgds-link>
-      <sgds-link href="https://google.com" size="lg">Large</sgds-link>
-      <sgds-link href="https://google.com" size="sm">Small</sgds-link>
-      <sgds-link href="https://google.com">
-        <i class="bi bi-arrow-left" slot="leftIcon"></i>
-        leftIcon</sgds-link>
-      <sgds-link href="https://google.com">
-        <i class="bi bi-arrow-right" slot="rightIcon"></i>
-        rightIcon</sgds-link>
-      <sgds-link href="https://google.com" target="_blank">
-        <i class="bi bi-arrow-right" slot="rightIcon"></i>
-        rightIcon</sgds-link>
+      <a href="#" disabled>disabled light dom anchor</a>
+      <sgds-link>
+        <a href="#"><sgds-icon name="placeholder"></sgds-icon> light dom anchor</a>
+      </sgds-link>
+      <sgds-link>
+        <a href="#">light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link >
+        <a disabled>disabled light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link variant="danger">
+        <a href="#">Danger light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link variant="danger">
+        <a href="#" disabled>Danger light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link size="lg">
+        <a href="#"> LG light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link size="sm">
+        <a href="#">SM light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+      <sgds-link>
+        <a href="#" target="_blank">SM light dom anchor <sgds-icon name="placeholder"></sgds-icon></a>
+      </sgds-link>
+
       <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test" placeholder="Placeholder"
         minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
       </sgds-textarea>
@@ -1492,17 +1502,79 @@
                 [3, "Larry", "@Bird", "@twitter"],
                 [4, "Chuck", "Norris", "@asdasdasd"]
               ]'></sgds-table>
-    </div>
-    <div class="container">
-      <div class="row">
-        <h2>Overflow</h2>
-        <sgds-dropdown menuVariant="default">
-          <sgds-icon-button slot="toggler" variant="ghost" size="sm" role="button" variant=${this.variant}
-            ?disabled=${this.disabled} aria-expanded="${this.menuIsOpen}" aria-haspopup="menu">
-            <sgds-icon name="three-dots"></sgds-icon>
-          </sgds-icon-button>
-          <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-              class="bi bi-upload" viewBox="0 0 16 16">
+        </div>
+        <div class="container">
+          <div class="row">
+            <h2>Overflow</h2>
+            <sgds-dropdown>
+              <sgds-icon-button
+              slot="toggler"
+              variant="ghost"
+              size="sm"
+              role="button"
+              variant=${this.variant}
+              ?disabled=${this.disabled}
+              aria-expanded="${this.menuIsOpen}"
+              aria-haspopup="menu"
+            >
+              <sgds-icon name="three-dots"></sgds-icon>
+            </sgds-icon-button>
+              <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                  fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                  <path
+                    d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                  <path
+                    d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
+                </svg>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item disabled>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+            </sgds-dropdown>
+          </div>
+          <h2>Dropdown</h2>
+          <div class="row">
+            <sgds-dropdown menuVariant="default" drop="up" disabled>
+              <sgds-button
+              slot="toggler"
+              role="button"
+            >
+              Dropdown
+              <sgds-icon name="chevron-down" slot="rightIcon"></sgds-icon>
+            </sgds-button>
+              <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                  fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                  <path
+                    d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                  <path
+                    d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
+                </svg>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item disabled>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+              <sgds-dropdown-item>Option label</sgds-dropdown-item>
+            </sgds-dropdown>
+
+          </div>
+        </div>
+        <div class="container">
+          <h2>Drawer</h2>
+          <sgds-drawer label="Drawer" class="drawer-overview">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <sgds-button slot="footer" variant="primary">Close</sgds-button>
+          </sgds-drawer>
+          <sgds-button>Open Drawer</sgds-button>
+        </div>
+
+        <div class="container">
+          <h2>Tooltip</h2>
+          Hover me
+          <sgds-tooltip content="This is a tooltip" placement="top" trigger="hover">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle"
+              viewBox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
               <path
                 d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
               <path
