feat(breadcrumb): stylings

--- a/index.html
+++ b/index.html
@@ -742,11 +742,16 @@
 		<div class="container">
 			<h2>Breadcrumb</h2>
 			<sgds-breadcrumb>
-				<sgds-breadcrumb-item href="https://www.yahoo.com">Home</sgds-breadcrumb-item>
-				<sgds-breadcrumb-item href="https://www.google.com">Item 1</sgds-breadcrumb-item>
-				<sgds-breadcrumb-item href="https://www.google.com">Item 2</sgds-breadcrumb-item>
-				<sgds-breadcrumb-item href="https://www.google.com">Item 3</sgds-breadcrumb-item>
-				<sgds-breadcrumb-item>Last Item</sgds-breadcrumb-item>
+				<sgds-breadcrumb-item>
+            <a href="#">Home</a>
+        </sgds-breadcrumb-item>
+				<sgds-breadcrumb-item>
+            <a href="#">About</a>
+        </sgds-breadcrumb-item>
+				<sgds-breadcrumb-item active>
+            <a href="https://www.google.com/">Contacts</a>
+        </sgds-breadcrumb-item>
+		
 			</sgds-breadcrumb>
 		</div>
 		<div class="container">
